got Calculate Heading, Ground speed, and Wind Correction to work with knots inputs and also got the spinners to work for that page.  WILL NOT WORK WITH MPH or KPH yet

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name="addAndDeleteActivity"></activity>
         <activity android:name="SettingsActivity"></activity>
+        <activity android:name="calculationsActivity"></activity>
+        <activity android:name="headingGsWcaActivity"></activity>
     </application>
 
 </manifest>
