--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,8 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" 
+        android:screenOrientation="portrait">
         <activity
             android:name=".MainPageActivity"
             android:label="@string/app_name" >
