--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,8 +9,9 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" 
-        android:screenOrientation="portrait">
+        >
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainPageActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -19,10 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="addAndDeleteActivity"></activity>
-        <activity android:name="SettingsActivity"></activity>
-        <activity android:name="calculationsActivity"></activity>
-        <activity android:name="headingGsWcaActivity"></activity>
+        <activity android:name="addAndDeleteActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="SettingsActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="calculationsActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="headingGsWcaActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
