--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,12 @@
         <activity android:name="SettingsActivity" android:screenOrientation="portrait"></activity>
         <activity android:name="calculationsActivity" android:screenOrientation="portrait"></activity>
         <activity android:name="headingGsWcaActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="wSpeedAndDirectionActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="trueAirspeedActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="densityAltitudeActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="runwayWindsActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="distanceCourseActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="documentsActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
